[gd_scene load_steps=7 format=3 uid="uid://bbsa6nosfft2q"]

[ext_resource type="Script" path="res://commandBlocks/BaseCommand.gd" id="1_6ahbc"]
[ext_resource type="FontFile" uid="uid://cmneu8yi1l5tw" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="2_il0tu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dhl3p"]
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_detail = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_75y6u"]
size = Vector2(200, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sxa1h"]
size = Vector2(200, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p81gm"]
size = Vector2(200, 3)

[node name="Command" type="MarginContainer" groups=["Command"]]
z_index = 2
z_as_relative = false
custom_minimum_size = Vector2(200, 20)
offset_right = 210.0
offset_bottom = 20.0
theme_override_constants/margin_left = 10
script = ExtResource("1_6ahbc")

[node name="Background" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_dhl3p")

[node name="Text" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_il0tu")
theme_override_font_sizes/font_size = 21
text = "Do Something"

[node name="Area2D" type="Area2D" parent="Background"]
visible = false
position = Vector2(-10, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Area2D"]
position = Vector2(110, 10)
shape = SubResource("RectangleShape2D_75y6u")

[node name="AreaUp" type="Area2D" parent="Background" groups=["AreaUp", "Droppable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/AreaUp"]
position = Vector2(100, -2)
shape = SubResource("RectangleShape2D_sxa1h")
debug_color = Color(0.705882, 0.266667, 1, 0.419608)

[node name="AreaDown" type="Area2D" parent="Background" groups=["AreaDown", "Droppable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/AreaDown"]
position = Vector2(100, 21.5)
shape = SubResource("RectangleShape2D_p81gm")
debug_color = Color(0.705882, 0.266667, 1, 0.419608)

[connection signal="mouse_entered" from="Background" to="." method="_on_background_mouse_entered"]
[connection signal="mouse_exited" from="Background" to="." method="_on_background_mouse_exited"]
[connection signal="area_entered" from="Background/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Background/Area2D" to="." method="_on_area_2d_area_exited"]
